--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <br>
         <br>
         <br>
-        <footer> Done by Subharanjana</footer>
+        <footer> Done by Subaranjana</footer>
     </section>
         </body> 
 </html>
